Release Notes
=============

==== Jena 2.5.4

N3 & Turtle Writer
    o Correct writing nested bnodes with no properties to make strict Turtle.
    o No longer automatcally add default namespace prefix. 

==== Jena 2.5.3

Statement.Util
    o The interface Statement has grown a Util class containing
      the three constants getSubject, getPredicate, and getObject,
      which are Map1 objects with the obvious meanings.

Assembler modification-and-fix
    o There was a bug with the behaviour of OntModelSpec assemblers.
      The "feature" that if a ja:OntModelSpec had no properties it
      was treated as an OntModelSpec constant name did not work,
      since the generalAssembler obligingly inferred properties for
      it.

      The behavior has changed (I hope for the better ...). Instead,
      an OntModelSpec is built by modifying the properties of [a copy
      of] a default spec, which is normally OWL_MEM_RDFS_INF. However,
      if the root resource is ja:<SomeOntModelSpecConstantName>, then
      that constant provides the default. This gives the intended
      behaviour of "I specified no properties" and additionally
      allows specs to be specified as tweaks-to-a-constant.
      
      ContentAssemblers can now be constructed with default FileManager
      arguments. External content is loaded using that FileManager.
      The object of an externalContent statement can be a string
      literal or a URI.
      
      AssemblerGroups (which includes the instance Assembler.general)
      now support a `copy` method which makes a new group initialised
      with the same mapping.

      ReasonerFactoryAssembler now respects JA:reasonerClass properties,
      which specify the factory by giving its class name.

ModelSpec and family REMOVED
    o the long-obsolete and recently-deprecated ModelSpec has been removed,
      along with its related tests, descendants, registry, and references.